# data-engineering-zoomcamp-sprint

./: README.md  main.py  pyproject.toml
week-1/:  notes.md
week-1/1-docker-intro/: Dockerfile  pipeline.py
week-1/2-docker-sql/: Dockerfile  pipeline.py  pipeline_polars.py
week-1/2-docker-sql/dlt_pipeline/: pipeline_dlt.py
